# mcp-elicitation-example

./: README.md  elicitation-client.py  presentation.md  pyproject.toml
